# custom-llm-provider-inspector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: __init__.py  api.py  benchmark.py  capabilities.py  env.py  models.py  scanner.py  session.py
ui/: app.py  screens.py  theme.py
